--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 /**/
 :root{
-    --primary: #3E8989;
-    --secondaty: #564D65;
-    --text: #1A181B;
-    --box: #2CDA9D;
-    --stuff: #2CDA9D;
+    --primary: #313E50;
+    --secondaty: #3A435E;
+    --acent:#455561;
+    --text: #ffffff;
+    --bacground: #5C6672;
+    --nutral: #6C6F7F;
 }
 
 /*reset*/
@@ -43,13 +44,7 @@ video{
     color: #222;
     background: var(--primary);
 }
-input,textarea{
-    background-color: rgba(255,255,255,0.1);
-    padding: 10px 16px;
-    border-radius: 20px;
-    border: 2px solid #9893D8;
-    color:#f2f2f2;
-}
+
 
 /*fonts*/
 @font-face{
@@ -57,11 +52,11 @@ input,textarea{
     src: url(Handjet-VariableFont_ELGR\,ELSH\,wght.ttf);
 }
 h1,h2,h3,h4{
-    color: #DDDBFF;
+    color: var(--text);
     font-weight: normal;
 }
 p,a,li{
-    color: #9893D8;
+    color: var(--text);
 }
 h1,h3{
     font-size: 1.2em;
@@ -94,7 +89,7 @@ h4{
     grid-column: 1/4;
     grid-row: 1;
     padding-bottom: 10px;
-    border-bottom: 3px solid var(--primary);
+    border-bottom: 3px solid var(--acent);
 }
 #welcome{
     padding: 0 20px 20px 20px;
@@ -115,18 +110,15 @@ h4{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    padding: 5px 20px 30px 5px;
-    background-color: #07083E;
-    opacity: 0.6;
+    padding: 5px 20px 20px 5px;
+    background-color: var(--bacground);
 }
 .line-box h3{
     margin-bottom: 0;
     text-align: center;
     font-size: 1.1em;
 }
-#vmsetup-box p{
-    padding: 10px;
-}
+
 .projects a{
     grid-column: 1/9;
     margin: 20px 0;
@@ -139,7 +131,7 @@ h4{
     align-self: center;
 }
 .projects h4{
-    color: #9994f7;
+    color: var(--acent);
 }
 
 .line-box h3{
@@ -158,41 +150,53 @@ h4{
     height: 80px;
     margin: 10px auto
 }
-#ssh-git-box p{
+.big-box{
+    padding-top: 10px;
+    padding-bottom: 20px;
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.big-box video, p, h4, li{
+    max-width: 90%;
+    margin-left: 5%;
+}
+#vmsetup-box p, h4, li, ul{
     padding: 10px;
 }
-#contact {
-    padding: 30px 20px;
-    background: #080936;
+#ssh-git-box p, h4, li, ul{
+    padding: 10px;
 }
-#contact h3, #contact p{
-    text-align: center;
-    margin-bottom: 0;
+#apache2-box p, li, ul{
+    padding: 10px;
 }
-#contact form{
-    width: 80%;
-    max-width: 400px;
-    margin: 20px auto;
-    text-align: center;
+#github-box p, li, ul{
+    padding: 10px;
 }
-#contact input, #contact textarea{
-    width: 100%;
-    margin: 10px 0;
+#more {
+    display: none;
 }
-#contact .button{
-    margin-top: 10px;
+.button-grid{
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    gap: 10px;
+    box-sizing: border-box;
+}
+#rmvm, #rmsg, #rmvmlg, #rmwc, #rma2, #rmgrw{
+    grid-column: 5;
+}
+#myBtn{
+    grid-column: 5;
 }
 footer{
     padding: 30px 20px;
-    background-color: #14153D;
-    background-image: url();
+    background-color: var(--bacground);
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: top center;
 }
 footer .copyright{
-    grid-column: 1/4;
-    font-size: 0.8em;
+    grid-column: 1/5;
+    font-size: 1.5em;
 }
 footer .social{
     grid-column: 7/9;
@@ -203,7 +207,7 @@ footer li{
     margin: 0 6px;
 }
 footer img{
-    width: 20px;
+    width: 35px;
 }
 
 /* small tablet styles*/
@@ -323,11 +327,17 @@ footer img{
         max-width: 100%;
         margin: 30px 0;
     }
+    footer .copyright{
+        font-size: 1.25em
+    }
     footer{
-        padding: 90px 0;
+        padding: 30px 0;
         background-size: 30%;
     }
     footer img{
-        width: 30px;
+        width: 60px;
+    }
+    .big-box{
+        font-size: 1.1em;
     }
 }
